Fix for gok container being too much on the left

--- a/Resources/Private/Sass/Sections/_nkwgok.scss
+++ b/Resources/Private/Sass/Sections/_nkwgok.scss
@@ -14,6 +14,11 @@
 	ul {
 		padding: 0 !important;
 	}
+	.tree {
+		ul {
+			margin-left: 0!important;
+		}
+	}
 }
 .tree a {
 	border-bottom: 0;
