--- a/Resources/Public/Css/main.css
+++ b/Resources/Public/Css/main.css
@@ -1459,6 +1459,9 @@ fieldset.tx-powermail-pi1_fieldset textarea:focus, fieldset.tx-powermail-pi1_fie
 .gokContainer ul {
   padding: 0 !important;
 }
+.gokContainer .tree ul {
+  margin-left: 0 !important;
+}
 
 .tree a {
   border-bottom: 0;
